CSS/style.css
@import url(../CSS/reset.css);


/*AQUÍ VAN LAS VARIABLES*/
:root {
  --purple: #6a37d4;
  --yellow: #facc15;
  --yellow-dark-text: #5d5200;
  --black: #18181b;
  --white: #ffffff;
  --grey: #eae7e7;
  --red: #be2d06;
  --grey-text-paragraph: #5c5b5b;
  --white-cream: #f9f6f5;
  --font: "Plus Jakarta Sans", sans-serif;
}

/*ESTILO GENERAL DE TODA LA PAGINA, FONDO Y FUENTE*/
body {
  font-family: var(--font);
  background: var(--white-cream);
}

/*ESTILO HEADER Y MENU HAMBURGUESA*/
h1 {
  font-size: 2rem;
  color: var(--purple);
  margin-bottom: 1rem;
  font-style: italic;
}

.navbar {
  background-color: rgba(250, 204, 21, 0.7);
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  flex-wrap: wrap;
  position: relative;
  padding: 16px 120px;
  border-bottom: 2px solid var(--purple);
}
.menu_hamburguesa {
  display: none;
}
.menu_hamburguesa:checked ~ .ul_links {
  height: calc(100vh - 70px);
}
.list_icon {
  color: var(--purple);
  cursor: pointer;
}
.ul_links {
  width: 100%;
  background-color: var(--purple);
  position: absolute;
  top: 80px;
  left: 0;
  height: 0;
  /*height: calc(100vh - 70px); */
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 3rem;
}
.link {
  font-size: 3.5rem;
  color: rgba(250, 204, 21, 0.7);
  font-weight: bold;
}

/*ESTILOS CONTENIDO LANDING PAGE*/

.container1{
    display: flex;
    height: auto;
    max-width: auto;
    border-radius: 48px;
    box-shadow: 8px 8px 0 0 #6A37D4;
    margin:40px;
    display: flex;
    margin: 20px;
    padding: 80px;
    background-image: url("../assets/images/duck_conteiner1.png");
    background-size: 100%;
    background-position: center;

}
.edicion_lim{
    background-color: #6A37D4;
    font-size: 10px;
    color: #F9F6F5;
    font-weight: bold;
    display: inline-block;
    padding: 4px 20px;
    border-radius: 40px;
    margin: 5px;
    letter-spacing: 2.4px;
}

.quack{
    color: #5D5200;
    font-size: 48px;
    font-style: italic;
    font-weight: 800;
    line-height: 43.2px; /* 90% */
    letter-spacing: -2.4px; 
}
.text1{
    font-size: 14px;
    color: #5C5B5B;
    margin-bottom: 1rem;
    text-align: left;
    font-weight: 500;
    line-height: 20px; /* 142.857% */
    align-self: stretch;
}
.new_icon{
    width: auto;
    height: auto;
    margin-bottom: 1rem;
}
.button_catalog {
    display: inline-flex;
    padding: 20px 20px 20px 20px;
    align-items: left   ;
    font-size: 20px;
    color: white;
    gap: 8px;
    border-radius: 9999px;
    background: #6A37D4;
    box-shadow: 4px 4px 0 0 #2F2F2E;
    margin-bottom: 10px;
    margin-left: 30px;
}

.rocket_icon {
    width: 20px;
    height: 20px;
    margin-left: 5px;
    
}
.duck_main{
    max-width: 60%;
    height: auto;
}

/*AQUÍ COMIENZAN LOS ESTILOS DEL FOOTER*/
.footer {
  display: flex;
  padding: 64px 48px;
  align-items: center;
  gap: 15rem;
  justify-content: center;

  border-radius: 48px 48px 0 0;
  background: rgba(250, 204, 21, 0.7);
  box-shadow: 0 -8px 30px 0 rgba(106, 55, 212, 0.1);
}

.link-footer {
  display: flex;
  gap: 8rem;
}

.rrss-footer-container ul{
  display: flex;
  gap: 2rem;
}

.contact-button {
  outline: none;
  display: flex;
  padding: 24px 48px;
  align-items: center;
  gap: 16px;

  border-radius: 9999px;
  background: #6a37d4;
  box-shadow: 6px 6px 0 0 #2f2f2e;

  color: var(--white-cream);
  text-align: center;
  font-family: var(--font);
  font-size: 24px;
  font-style: normal;
  font-weight: 800;
}

.contact-button:hover {
  cursor: pointer;
}

.naming-footer {
  color: var(--black);
  font-family: var(--font);
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 800;
  line-height: 1.75rem;
}

.copyright-footer {
  color: var(--black);
  font-family: var(--font);
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 700;
  line-height: 1.25rem;
  letter-spacing: 0.0875rem;
}

.link-footer li{
    color: var(--yellow-dark-text);
font-family: var(--font);
font-size: 0.875rem;
font-style: normal;
font-weight: 700;
line-height: 1.25rem;
letter-spacing: 0.0875rem;
}

/*ANIMACIONES FOOTER*/
.link-footer li:hover{
    text-decoration: underline var(--purple);
    text-underline-offset: 0.4rem;
    text-decoration-thickness: 0.5rem;
}

.rrss-footer-container li:hover{
    box-shadow: 5px -12px 30px 5px rgba(106, 55, 212, 0.8);
    border-radius: 2rem;
    transition: box-shadow 0.3s ease;
}

.contact-button:hover{
    background: var(--white-cream);
    color: var(--purple);
    transition: background 0.8s ease;
}

